# bylo-sobie-zycie

./: .clang-format  .gitignore  CMakeLists.txt  justfile  runAll.sh
common/: CMakeLists.txt
include/: board.hpp  utils.hpp
scripts/: async.sh  async_block.sh  serial.sh
solutions/async/: CMakeLists.txt
solutions/async/src/: main.cpp
solutions/async_block/: CMakeLists.txt
solutions/async_block/src/: main.cpp
solutions/serial/: CMakeLists.txt
solutions/serial/src/: main.cpp
src/: CMakeLists.txt  board.cpp  utils.cpp
